--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,15 @@
     "src"
   ],
   "compilerOptions": {
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
+    "jsx": "react",
     "sourceMap": false,
     "types": ["node", "cypress"]
   }
